--- a/just/Deploying-a-React-App-with-JSON-Server-on-Vercel.html
+++ b/just/Deploying-a-React-App-with-JSON-Server-on-Vercel.html
@@ -199,7 +199,7 @@ cd your-react-app</code></pre>
         </main>
         <footer>
             <div class="footer-decoration"></div>
-            <p>&copy; 2024 Your Blog Name. All rights reserved.</p>
+            <p>&copy; 2024 Fidal. All rights reserved.</p>
         </footer>
     </div>
 </body>
