--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <input type="text" id="routingNumber" name="routingNumber" placeholder="987654321" required>
                 
                 <label for="bankName">Bank Name:</label>
-                <input type="text" id="bankName" name="bankName" placeholder="State Bank of India" required>
+                <input type="text" id="bankName" name="bankName" placeholder="MrFidal Bank of India" required>
                 
                 <button type="submit">Submit</button>
             </form>
